# demodebug

./: .gitignore  CMakeLists.txt  clean.sh  compare.cpp  detect_feature.cpp  histogram_stretch.cpp  match.cpp  readme.md  rectangle.cpp  run.sh  std_time.h  test_inhert.cpp
histogram/: histogram.cpp  histogram.h
